list providers and preview total products

--- a/src/views/provider.html
+++ b/src/views/provider.html
@@ -1,117 +1,52 @@
 {include="shared/Header/header"}
 <!------------PRODUTOS------------------->
-<section id="" class="" style="margin-top: 20px !important; margin-bottom: 0px">
+
+{if="$providers"}
+
+<section style="margin-top: 20px !important; margin-bottom: 0px">
   <div class="container">
     <div class="lista-produtos">
-      <div class="row jj">
-        <input
-          class="form- col-md-8"
-          style="
-            margin-left: 28px;
-            margin-right: 18px;
-            padding: 5px 10px;
-            border-radius: 10px;
-          "
-          type="text"
-          name=""
-          id=""
-          placeholder="Pesquisar por produtos"
-        />
-        <select
-          class="col-md-3"
-          name=""
-          id=""
-          style="
-            color: #fff;
-            border: none;
-            padding: 5px 10px;
-            border-radius: 10px;
-            background: #2a2d3a;
-          "
+      <div class="row">
+        <form
+          action="/bioloOnline/providers"
+          method="get"
+          class="col-md-12"
+          style="color: white"
         >
-          <option value="">Minhas Categorias</option>
-          <option value="1">Roupas</option>
-          <option value="2">Calsados</option>
-        </select>
+          <input
+            class="form-control"
+            style="
+              margin-right: 18px;
+              padding: 5px 10px;
+              border-radius: 10px;
+              color: white;
+            "
+            type="text"
+            name="search"
+            value="{$search}"
+            placeholder="Pesquisar por produtos"
+          />
+        </form>
       </div>
       <!------------PRODUTOS------------------->
       <section id="vendedor" style="margin-top: 10px">
         <div class="container">
           <div class="row">
+            {loop="$providers"}
             <div class="col-md-3">
-              <span class="activo">1</span>
-              <img src="src/assets/images/img-scroll/1.jpg" />
+              <span class="activo"
+                >{function="GetTotalProductsByProvider($value.id)"}</span
+              >
+              <img src="/bioloOnline/src/resources/{$value.foto}" />
               <div class="online"></div>
-              <a class="nome-vendedor" href="profile-provider"
-                >Osvaldo Cariege</a
+              <a
+                class="nome-vendedor"
+                href="/bioloOnline/profile-provider/{$value.id}"
+                >{$value.nome}</a
               >
               <span>2.99</span>
             </div>
-            <div class="col-md-3">
-              <span class="activo">1</span>
-              <img src="src/assets/images/img-scroll/1.jpg" />
-              <div class="online"></div>
-              <a class="nome-vendedor" href="profile-provider"
-                >Osvaldo Cariege</a
-              >
-              <span>2.99</span>
-            </div>
-            <div class="col-md-3">
-              <span class="activo">1</span>
-              <img src="src/assets/images/img-scroll/1.jpg" />
-              <div class="online"></div>
-              <a class="nome-vendedor" href="profile-provider"
-                >Osvaldo Cariege</a
-              >
-              <span>2.99</span>
-            </div>
-            <div class="col-md-3">
-              <span class="activo">1</span>
-              <img src="src/assets/images/img-scroll/1.jpg" />
-              <div class="online"></div>
-              <a class="nome-vendedor" href="profile-provider"
-                >Osvaldo Cariege</a
-              >
-              <span>2.99</span>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-3">
-              <span class="activo">1</span>
-              <img src="src/assets/images/img-scroll/1.jpg" />
-              <div class="online"></div>
-              <a class="nome-vendedor" href="profile-provider"
-                >Osvaldo Cariege</a
-              >
-              <span>2.99</span>
-            </div>
-            <div class="col-md-3">
-              <span class="activo">1</span>
-              <img src="src/assets/images/img-scroll/1.jpg" />
-              <div class="online"></div>
-              <a class="nome-vendedor" href="profile-provider"
-                >Osvaldo Cariege</a
-              >
-              <span>2.99</span>
-            </div>
-            <div class="col-md-3">
-              <span class="activo">1</span>
-              <img src="src/assets/images/img-scroll/1.jpg" />
-              <div class="online"></div>
-              <a class="nome-vendedor" href="profile-provider"
-                >Osvaldo Cariege</a
-              >
-              <span>2.99</span>
-            </div>
-            <div class="col-md-3">
-              <span class="activo">1</span>
-              <img src="src/assets/images/img-scroll/1.jpg" />
-              <div class="online"></div>
-              <a class="nome-vendedor" href="profile-provider"
-                >Osvaldo Cariege</a
-              >
-              <span>2.99</span>
-            </div>
+            {/loop}
           </div>
         </div>
       </section>
@@ -123,21 +58,20 @@
 <!--==============PAGINAÇÃO==============-->
 <nav class="paginacao" aria-label="Page navigation example">
   <ul class="pagination justify-content-center">
+    {loop="$pages"}
     <li class="page-item">
-      <a class="page-link" href="#" aria-label="Previous">
-        <span aria-hidden="true">&laquo;</span>
-        <span class="sr-only">Previous</span>
-      </a>
+      <a class="page-link" href="{$value.href}">{$value.text}</a>
     </li>
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item">
-      <a class="page-link" href="#" aria-label="Next">
-        <span aria-hidden="true">&raquo;</span>
-        <span class="sr-only">Last</span>
-      </a>
-    </li>
+    {/loop}
   </ul>
 </nav>
-{include="shared/Footer/footer"}
+
+{else}
+
+<section>
+  <div class="container">
+    <h1 style="color: white">Sem provedores</h1>
+  </div>
+</section>
+
+{/if} {include="shared/Footer/footer"}
