show empty data if don't exists products of provider

--- a/src/views/profile-provider.html
+++ b/src/views/profile-provider.html
@@ -13,7 +13,7 @@
 
 <!------------PRODUTOS------------------->
 
-{if="$products"}
+{if="$productFilter !== 0"}
 <section style="margin-top: 150px !important; margin-bottom: 0px">
   <div class="container">
     <div class="lista-produtos">      
