add full search in profile provider

--- a/src/views/profile-provider.html
+++ b/src/views/profile-provider.html
@@ -48,6 +48,7 @@
               background: #2a2d3a;
             "
           >
+            <option value="0">All</option>
             {loop="$categories"}
             <option value="{$value.id}">{$value.nome}</option>
             {/loop}
