--- a/src/views/admin/provider-admin.html
+++ b/src/views/admin/provider-admin.html
@@ -108,6 +108,7 @@
               background: #2a2d3a;
             "
           >
+            <option value="0">All</option>
             {loop="$categories"}
             <option value="{$value.id}">{$value.nome}</option>
             {/loop}
